style.css
html{
    box-sizing: border-box;
}
*, *::before, *::after{
    box-sizing: inherit;
}
.wrapper{
    max-width: 1200px;/***********************PX************************************/
    margin: 0 auto;
}
body{
    font-family: Arial, Helvetica, sans-serif;
    font-style: normal;
    font-size: 15px;
    line-height: 24px;
    font-weight: normal;
}

/*************HEADER********************/
/*************START********************/


.header{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}
.header__wrapper{
    padding-top: 60px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    color: #CDCDCD;
}
.header__logo{
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
}
.header__nav{
    margin-bottom: 10px;
    display: flex;
    align-items: flex-end;
}
.header__nav-list{
    display: flex;
    justify-content: flex-end;
    flex-wrap: wrap;
}
.header__nav-item{
    margin-right: 35px; /***********************PX************************************/

}
.header__nav-item:last-child{
    margin-right: 0px;
}
.header__nav-list{
    font-size: 15px;
    text-decoration: none;
    color: #CDCDCD;
    line-height: 160%;
    list-style-type:none;
}

.header__nav-item:hover, .header__nav-item:active, .header__nav-item:focus{
    border-bottom: solid #F1CDB3;
}

.header__logo-title{
    text-decoration: none;
    color: #F1CDB3;
    font-size: 32px;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    margin-bottom: 10px;
}
.header__logo-subtitle{
    text-decoration: none;
    font-family: 'Arial';
    font-size: 13px;
    color: #FFFFFF;
}

.header__logo{
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
}

/*************HEADER********************/
/*************END********************/


/*************INFO********************/
/*************START********************/

.info{
    padding-top: 60px;
    min-height: 100vh; /*height window*/
    background-image: url(./assets/png/start-screen-gradient-background.png);
    background-size: cover;
    -moz-background-size: 100%; /* Firefox 3.6+ */
    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
    -o-background-size: 100%; /* Opera 9.6+ */
    background-size: 100%;
}
.info-container{
    background-image: url(./assets/png/start-screen-puppy.png);
    background-repeat: no-repeat;
    background-position: right bottom;
    min-height: 100vh;
    margin-bottom: 94px;
}
.info-information{
    padding-top: 163px;
    width: 460px;
    margin-bottom: 243px;
}
.info-title{
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 44px;
    line-height: 130%;
    color: #FFFFFF;
    margin-top: 0;
    width: 310px;
    margin-bottom: 42px;
}
.info-subtitle{
    font-family: 'Arial';
    font-style: normal;
    font-weight: 400;
    font-size: 15px;
    line-height: 160%;
    color: #CDCDCD;
    margin-bottom: 42px;
}
.info-button{
    padding: 15px 45px;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 17px;
    line-height: 130%;
    color: #292929;
    background-color: #F1CDB3;
    border: #F1CDB3;
    border-radius: 100px;
}
/*************INFO********************/
/*************END********************/

/*************ABOUT********************/
/*************START********************/

.about{
    padding-bottom: 100px;
}
.about-wrapper{
    background: url(./assets/png/about-pets.png) no-repeat ;
    display: flex;
    justify-content: flex-end;
}
.about-wrapper-information{
    width: 430px;
    display: flex;
    flex-direction: column; 
}
.about-title{
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 35px;
    line-height: 130%;
    width: 370px;
    letter-spacing: 0.06em;
}
.about-text{
  font-family: 'Arial';
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 160%;
}
.about-text-text{
  font-family: 'Arial';
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 160%;
}
/*************ABOUT********************/
/*************END********************/


/*************PETS********************/
/*************START********************/
.pets{
    background-color: #F6F6F6;
}
.pets-title{
    margin: 0;
    padding: 9.12% 33.3%;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 35px;
    line-height: 130%; 
    letter-spacing: 0.06em;
    color: #545454;;
    opacity: 0.4;
}
.pets_cards{
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-column-gap: 7.5%;
}
.pets_card{
    grid-column: span 1;
    background-color:#FAFAFA;
    margin-bottom: 60px ;
}
.pets_card_img{
    margin-bottom: 30px;
}
.pets_card_name{
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 23px;
    letter-spacing: 0.06em;
    margin-left: 98px;
}
.pets_card_button{
    margin: 15px 41.5px;
    color: #292929;
    background-color:#FAFAFA;
    border: 2px solid #F1CDB3;
    border-radius: 100px;
    width: 187px;
    height: 52px;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 17px;
    line-height: 130%;
    letter-spacing: 0.06em;
}
.pets_card-button_button{
    width: 261px;
    height: 52px;
    background: #F1CDB3;
    border-radius: 100px;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 17px;
    line-height: 130%;
    letter-spacing: 0.06em;
    border: #F1CDB3;
    margin-left: 470px;
    margin-bottom: 100px;
}
/*************PETS********************/
/*************END********************/

